Add register login

--- a/web/register.html
+++ b/web/register.html
@@ -12,13 +12,19 @@
     <form class="form register-form">
         <div class="form-group">
             <div class="row">
-                <div class="col-6">
+                <div class="col-12">
                     <label>Username</label>
                     <input class="form-control" type="text" name="username" placeholder="Username"/>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-6">
                     <label>Password</label>
                     <input type="password" class="form-control" name="password" placeholder="Password"/>
+                </div>
+                <div class="col-6">
+                    <label>Confirm password</label>
+                    <input type="password" class="form-control" name="password_cnf" placeholder="Confirm password"/>
                 </div>
             </div>
         </div>
