Completed login and register

--- a/web/register.html
+++ b/web/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link id="mainCssLink" rel="stylesheet" type="text/css" href="css/style.css"/>
     <title>Register</title>
+    <script src="utils.js"></script>
 </head>
 <body>
 <div class="register-form-container">
@@ -28,9 +29,10 @@
                 </div>
             </div>
         </div>
-        <input type="button" class="btn btn-primary btn-register" value="Register" />
+        <input type="button" class="btn btn-primary btn-register" value="Register" id="registerButton"/>
     </form>
-    <a href="login.html" class="register-link">Login here</a>
+    <a href="index.html" class="register-link">Login here</a>
 </div>
+<script src="registerManagement.js"></script>
 </body>
 </html>
