--- a/web/index.html
+++ b/web/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link id="mainCssLink" rel="stylesheet" type="text/css" href="css/style.css"/>
+    <title>Login</title>
+    <script src="utils.js"></script>
 </head>
 <body>
-
+<div class="login-form-container">
+    <h2>Login to your account</h2>
+    <div id="alertContainer" class="alert alert-danger"></div>
+    <form class="form login-form">
+        <div class="form-group">
+            <input class="form-control" type="text" name="username" placeholder="Username" />
+            <input class="form-control" type="password" name="password" placeholder="Password" />
+        </div>
+        <input type="button" class="btn btn-primary btn-login" value="Login" id="loginbutton"/>
+    </form>
+    <p>Do not have an account? <a href="register.html" class="login-link">Register here!</a></p>
+</div>
+<script src="loginManagement.js"></script>
 </body>
 </html>
