Fix html for login and register

--- a/web/register.html
+++ b/web/register.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-12">
                     <label>Username</label>
-                    <input class="form-control" type="text" name="username" placeholder="Username"/>
+                    <input class="form-control" type="email" name="username" placeholder="Username"/>
                 </div>
             </div>
             <div class="row">
