--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     <div id="alertContainer" class="alert alert-danger"></div>
     <form class="form login-form">
         <div class="form-group">
-            <input class="form-control" type="text" name="username" placeholder="Username" />
+            <input class="form-control" type="email" name="username" placeholder="Username" />
             <input class="form-control" type="password" name="password" placeholder="Password" />
         </div>
         <input type="button" class="btn btn-primary btn-login" value="Login" id="loginbutton"/>
