--- a/web/home.html
+++ b/web/home.html
@@ -2,9 +2,78 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Meetings</title>
+    <link id="mainCssLink" rel="stylesheet" type="text/css" href="css/style.css"/>
+    <script src="utils.js"></script>
+    <script src="pageManager.js"></script>
 </head>
 <body>
+<div class="container">
+    <div class="navbar">
+        <a href="home.html" class="active" >Home</a>
+        <div class="navbar-right">
+            <a href="logout">Logout</a>
+        </div>
+    </div>
+    <div class="page-content">
+        <div class="row"><div class="col-12"><div class="alert alert-danger" id="alertContainer"></div></div></div>
+        <h1 align="center">Welcome <span id="usernameText"></span></h1>
+        <div class="row">
+            <div class="col-4">
+                <h2 style="text-align:center">Your meetings</h2>
+                <table class="table table-gray" id="myMeetingsTable">
+                    <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th>Date</th>
+                        <th>Duration</th>
+                        <th>Max Participants</th>
+                    </tr>
+                    </thead>
+                    <tbody id="myMeetingsTableBody">
+
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-4">
+                <h2 style="text-align:center">Available meetings</h2>
+                <table class="table table-gray" id="availableMeetingsTable">
+                    <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th>Date</th>
+                        <th>Duration</th>
+                        <th>Max Participants</th>
+                    </tr>
+                    </thead>
+                    <tbody id="availableMeetingsTableBody">
+
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-4">
+                <h2>Create new meeting</h2>
+
+                <form class="form">
+                    <label>Title</label>
+                    <input type="text" class="form-control" name="meetingName"/>
+                    <!-- NOTA : Firefox non supporta datetime-local, perciò splittiamo -->
+                    <label>Date</label>
+                    <input type="date" class="form-control" name="meetingDate">
+                    <label>Time</label>
+                    <input type="time" class="form-control" name="meetingTime">
+                    <label>Duration (in minutes)</label>
+                    <input type="number" class="form-control" name="meetingDuration"/>
+                    <label>Max participants</label>
+                    <input type="number" class="form-control" name="meetingMaxParticipants"/>
+                    <input type="button" class="btn btn-success" value="Create" id="addMeetingButton"/>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Start modal content from here -->
 
 </body>
 </html>
