Completed meetings reader functions

--- a/web/home.html
+++ b/web/home.html
@@ -5,7 +5,7 @@
     <title>Meetings</title>
     <link id="mainCssLink" rel="stylesheet" type="text/css" href="css/style.css"/>
     <script src="utils.js"></script>
-    <script src="pageManager.js"></script>
+
 </head>
 <body>
 <div class="container">
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="page-content">
-        <div class="row"><div class="col-12"><div class="alert alert-danger" id="alertContainer"></div></div></div>
+        <div class="row"><div class="col-12"><div id="alertContainer"></div></div></div>
         <h1 align="center">Welcome <span id="usernameText"></span></h1>
         <div class="row">
             <div class="col-4">
@@ -74,6 +74,6 @@
 </div>
 
 <!-- Start modal content from here -->
-
+<script src="pageManager.js"></script>
 </body>
 </html>
