Created a servlet for each action

--- a/web/home.html
+++ b/web/home.html
@@ -16,11 +16,11 @@
         </div>
     </div>
     <div class="page-content">
-        <div class="row"><div class="col-12"><div id="alertContainer"></div></div></div>
         <h1 align="center">Welcome <span id="usernameText"></span></h1>
         <div class="row">
             <div class="col-4">
                 <h2 style="text-align:center">Your meetings</h2>
+                <div id="myMeetingsAlertContainer"></div>
                 <table class="table table-gray" id="myMeetingsTable">
                     <thead>
                     <tr>
@@ -37,6 +37,7 @@
             </div>
             <div class="col-4">
                 <h2 style="text-align:center">Available meetings</h2>
+                <div id="availableMeetingsAlertContainer"></div>
                 <table class="table table-gray" id="availableMeetingsTable">
                     <thead>
                     <tr>
