Added client-side checks for date, hour, duration and participants. Changed some ==s to ===. Fixed typo (maxPartecipants -> maxParticipants).

--- a/web/home.html
+++ b/web/home.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="page-content">
-        <h1 align="center">Welcome <span id="usernameText"></span></h1>
+        <h1 style="text-align: center; align-self: center">Welcome <span id="usernameText"></span></h1>
         <div class="row">
             <div class="col-4">
                 <h2 style="text-align:center">Your meetings</h2>
